# windows-RTX-voice-assistant-AI-and-Transcription

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
riva_client/client/: __init__.py  argparse_utils.py  asr.py  auth.py  nmt.py  package_info.py  tts.py
src/: __init__.py  pyttsx3_tts.py  tts_service.py  ultimate_voice_assistant.py  windows_tts.py
voice-assistant-windows/: LICENSE
voice-assistant-windows/config/: config.yaml
voice-assistant-windows/demos/: README.md  demo_azure_tts.py  demo_openai_tts.py  demo_piper_tts.py  list_voices.py  piper_wav_demo.py  simple_piper_demo.py  test_auto_tts.py  test_pyttsx3.py  try_bark_fix.py
